package(default_visibility = ["//visibility:private"])

load("@com_google_j2cl//build_defs:rules.bzl", "j2cl_application", "j2cl_import", "j2cl_library")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_library")

_SRCS = glob(["src/main/java/**/*.java"])

_RESOURCES = glob(["src/main/java/**/*"], exclude = ["**/*.java"])

j2cl_library(
    name = "react4j-todomvc-j2cl",
    srcs = glob(["src/main/java/react4j/todomvc/**/*.java"]),
    plugins = [
        "//thirdparty:arez_processor",
        "//thirdparty:react4j_processor",
    ],
    deps = [
        "//thirdparty:braincheck_core-j2cl",
        "//thirdparty:arez_core-j2cl",
        "//thirdparty:arez_spytools-j2cl",
        "//thirdparty:akasha_j2cl-j2cl",
        "//thirdparty:gwt-javaemul-internal-annotations-j2cl",
        "//thirdparty:javax_annotation-j2cl",
        "//thirdparty:jsinterop_annotations-j2cl",
        "//thirdparty:jsinterop_base-j2cl",
        "//thirdparty:react4j_core-j2cl",
        "//thirdparty:react4j_dom-j2cl",
    ],
)

closure_js_library(
    name = "react4j-closure",
    srcs = ["src/main/java/react4j/todomvc/Main.js"],
    deps = [":react4j-todomvc-j2cl"],
)

j2cl_application(
    name = "react4j-todomvc",
    entry_points = ["react4j.todomvc.Main"],
    extra_production_args = ["--env=CUSTOM"],
    deps = [":react4j-closure"],
)
