workspace(name = "org_realityforge_react4j_todomvc")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_java",
    sha256 = "8c376f1e4ab7d7d8b1880e4ef8fc170862be91b7c683af97ca2768df546bb073",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_java/releases/download/5.0.0/rules_java-5.0.0.tar.gz",
        "https://github.com/bazelbuild/rules_java/releases/download/5.0.0/rules_java-5.0.0.tar.gz",
    ],
)

# Merely loading the rule won't transitively execute code inside them to load
# their dependencies. Instead, as the consumer we have to request the rest of the
# setup.

load("@rules_java//java:repositories.bzl", "rules_java_dependencies", "rules_java_toolchains")

rules_java_dependencies()

rules_java_toolchains()

load("//thirdparty:dependencies.bzl", "generate_workspace_rules")

generate_workspace_rules()

load("//build_defs:gwt.bzl", "gwt_generate_workspace_rules")

gwt_generate_workspace_rules()
